@@ -35,7 +35,7 @@ demos <- function(which = c("references", "protein.equil", "affinity", "NaCl", "
   "mosaic", "copper", "arsenic", "solubility", "gold", "contour", "sphalerite", "minsol",
   "Shh", "saturation", "adenine", "DEW", "lambda", "potassium", "TCA", "aluminum",
   "AD", "comproportionation", "Pourbaix", "E_coli", "yttrium", "rank.affinity", "uranyl",
-  "sum_S", "MgATP"),
+  "sum_S", "MgATP", "protein_Cp", "protein_A", "rubisco_Zc"),
   save.png = FALSE) {
   # Run one or more demos from CHNOSZ with ask = FALSE, and return the value of the last one
   out <- NULL
